# learn-ml-hub

./: .gitignore  README.md  pyproject.toml
classification/: admin.py  dto.py  forms.py  interfaces.py  models.py  repositories.py  services.py  urls.py  views.py
core/: containers.py  exceptions.py  settings.py  urls.py
info_pages/: urls.py  views.py
static/css/: styles.css
static/js/: accuracy_chart.js  loss_chart.js
templates/: _base.html  footer.html  navbar.html  not_found.html
templates/auth/: delete_profile.html  login.html  logout.html  profile.html  registration.html  update_profile.html
templates/classification/: cats_or_dogs.html  create_model.html  user_model.html  user_models.html
templates/info_pages/: deep_learning.html  home.html  ml.html  ml_types.html  neural_networks.html
users/: dto.py  forms.py  interfaces.py  managers.py  models.py  repositories.py  services.py  urls.py  views.py
