[tool.poetry]
name = "web-with-ml"
version = "0.1.0"
description = ""
authors = ["Artem Kozatskyi <artemfury@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.2.6"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
tensorflow = "2.14.0"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
