[tool.poetry]
name = "web-with-ml"
version = "0.1.0"
description = ""
authors = ["Artem Kozatskyi <artemfury@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.2.6"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
keras = "2.14.0"
dependency-injector = "^4.41.0"
django-annoying = "^0.10.6"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["I", "D204", "F", "W", "E", "N"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
